Commit of external css file Update of index to link css and favicon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<head>
+	<title>Caleb's Testing Website</title>
+	<link rel="stylesheet" type="text/css" href="calebsite.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
 <body>
-<h1>Caleb's Website for Testing</h1>
+<h1>Caleb's Testing Website</h1>
 <p></p>
-<img src="/assets/1-original.png">
 </body>
 </html>
