BlueFires.otf h1 - h5 styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<h1>Caleb's Testing Website</h1>
-<p></p>
+<h1>Caleb's <em>Testing Website</em></h1>
+<h2>DON'T LOOK</h2>
+<h5>jk, it's fine</h5>
+<p>Enjoy!</p>
 </body>
 </html>
