--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Caleb's Testing Website<</h1>
-<h2><em>DON'T</em> LOOK</h2></br>
+<h2><i>DON'T</i> LOOK</h2></br>
 <h5>jk, it's fine</h5>
 <p>Enjoy!</p>
 </body>
