--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<h1>Caleb's Testing Website<</h1>
-<h2><i>DON'T</i> LOOK</h2></br>
+<h1>Caleb's Testing Website</h1>
+<h2><i>DON'T</i> LOOK</h2>
 <h5>jk, it's fine</h5>
 <p>Enjoy!</p>
 </body>
