Update to generic landing page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
 <!DOCTYPE html>
 <head>
-	<title>Caleb's Testing Website</title>
+	<title>Caleb's Testing Site</title>
 	<link rel="stylesheet" type="text/css" href="calebsite.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<h1>Caleb's Testing Website</h1>
-<h2><i>DON'T</i> LOOK</h2>
-<h5>jk, it's fine</h5>
-<p>Enjoy!</p>
+<h1>Caleb's Testing Site</h1>
+<h2>Currently used for image hosting purposes</h2>
 </body>
 </html>
