Test image source

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <h1>Caleb's Testing Site</h1>
 <h5>Currently used for image hosting purposes</h5>
+	<img src="/Round_3/Orig/6118640-399908949-0.png"></img>
 </body>
 </html>
