Testing the "Choose Your Own Adventure" html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
 <html>
 <!DOCTYPE html>
 <head>
-	<title>Caleb's Testing Site</title>
-	<link rel="stylesheet" type="text/css" href="calebsite.css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<title>Follow Your Own Path</title>
 </head>
+<style>
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Book.otf);
+		font-weight: normal;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BookItalic.otf);
+		font-weight: normal;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Bold.otf);
+		font-weight: bold;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BoldItalic.otf);
+		font-weight: bold;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Extralight.otf);
+		font-weight: 100;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-ExtralightItalic.otf);
+		font-weight: 100;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Black.otf);
+		font-weight: 900;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BlackItalic.otf);
+		font-weight: 900;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: blue-fires;
+		src: url(assets/BlueFires.otf);
+		font-weight: normal;
+	}
+	h2, h3, h4, h5, body, p {
+		font-family: 'fort', sans-serif;
+	}
+	body, p {
+		font-size: 1rem;
+		font-weight: normal;
+	}
+	h1 {
+		font-family: blue-fires, sans-serif;
+		font-size: 3rem;
+	}
+	h2 {
+		font-size: 2.5rem;
+		font-weight: 100;
+	}
+	h3 {
+		font-size: 2.5rem;	
+		font-weight: bold;
+	}
+	h4 {
+		font-size: 2rem;	
+		font-weight: normal;
+	}
+	h5 {
+		font-size: 1.5rem;	
+		font-weight: 100;
+	}
+</style>
 <body>
-<h1>Caleb's Testing Site</h1>
-<h5>Currently used for image hosting purposes</h5>
+<h1>Follow Your Own Path</h1>
+	<h2><i>Stealthnado</i></h2>
+	<h5><strong>Chapter 1</strong></h5>
+	<p>It's Laura's birthday today. You've been coworkers for 4 years, and you've ordered a cake that you need to pick up for a quick celebration after lunch.</p>
+	<p>
+		It's a hot out today, even hotter in a long sleeve dress shirt. The cake shop is 4 blocks away. You decide to:
+	</p>
+	<button id="path_btn">
+		Drive. No one looks good with sweat stains.
+	</button><br><br>
+<button id="path_btn">
+		Walk. It's good to get some exercise when you're sitting at a computer all day
+	</button>
 </body>
 </html>
