Back to testing html

--- a/index.html
+++ b/index.html
@@ -82,18 +82,7 @@
 	}
 </style>
 <body>
-<h1>Follow Your Own Path</h1>
-	<h2><i>Stealthnado</i></h2>
-	<h5><strong>Chapter 1</strong></h5>
-	<p>It's Laura's birthday today. You've been coworkers for 4 years, and you've ordered a cake that you need to pick up for a quick celebration after lunch.</p>
-	<p>
-		It's a hot out today, even hotter in a long sleeve dress shirt. The cake shop is 4 blocks away. You decide to:
-	</p>
-	<button id="path_btn">
-		Drive. No one looks good with sweat stains.
-	</button><br><br>
-<button id="path_btn">
-		Walk. It's good to get some exercise when you're sitting at a computer all day
-	</button>
+<h1>Testing Site</h1>
+	<h2><i>Currently used for hosting images</i>
 </body>
 </html>
