--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <!DOCTYPE html>
 <head>
-	<title>Follow Your Own Path</title>
+	<title>just black</title>
 </head>
 <style>
 	@font-face {
@@ -80,9 +80,12 @@
 		font-size: 1.5rem;	
 		font-weight: 100;
 	}
+	html {
+		background: black;
+	}
 </style>
 <body>
 <h1>Testing Site</h1>
-	<h2><i>Currently used for hosting images</i>
+	<h2><i>black screen. nothing else.</i>
 </body>
 </html>
