--- a/smart_home/Desk_Light.html
+++ b/smart_home/Desk_Light.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <head>
 	<title>just black</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/desklight_apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/desklight_favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/desklight_favicon-16x16.png">
+	<link rel="manifest" href="/site_desklight.webmanifest">
 </head>
     <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=office-light"
 </html>
