--- a/smart_home/Close_Garage.html
+++ b/smart_home/Close_Garage.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <head>
 	<title>Close the Garage</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/close_garage_apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/close_garage_favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/close_garage_favicon-16x16.png">
+	<link rel="manifest" href="/site_close_garage.webmanifest">
 </head>
     <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=close-garage"
 </html>
