--- a/smart_home/Close_Garage.html
+++ b/smart_home/Close_Garage.html
@@ -7,5 +7,92 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/close_garage_favicon-16x16.png">
 	<link rel="manifest" href="/site_close_garage.webmanifest">
 </head>
-    <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=close-garage"
+<style>
+    html {
+        background: black;        
+    }
+    @font-face {
+		font-family: fort;
+		src: url(assets/Fort-Book.otf);
+		font-weight: normal;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BookItalic.otf);
+		font-weight: normal;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Bold.otf);
+		font-weight: bold;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BoldItalic.otf);
+		font-weight: bold;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Extralight.otf);
+		font-weight: 100;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-ExtralightItalic.otf);
+		font-weight: 100;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-Black.otf);
+		font-weight: 900;
+	}
+	@font-face {
+		font-family: fort;
+		src: url(assets/Fort-BlackItalic.otf);
+		font-weight: 900;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: blue-fires;
+		src: url(assets/BlueFires.otf);
+		font-weight: normal;
+	}
+	h2, h3, h4, h5, body, p {
+		font-family: 'fort', sans-serif;
+	}
+	body, p {
+		font-size: 1rem;
+		font-weight: normal;
+	}
+	h1 {
+		font-family: blue-fires, sans-serif;
+		font-size: 3rem;
+	}
+	h2 {
+		font-size: 2.5rem;
+		font-weight: 100;
+	}
+	h3 {
+		font-size: 2.5rem;	
+		font-weight: bold;
+	}
+	h4 {
+		font-size: 2rem;	
+		font-weight: normal;
+	}
+	h5 {
+		font-size: 1.5rem;	
+		font-weight: 100;
+	}
+    #icon_pic {
+        margin-top: 30px;
+    }
+</style>
+    <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=close-garage"></iframe>
+    <div id="icon_pic" align="center">
+        <a href=”javascript:history.go(0)”><img src="/smart_home/close_garage_android-chrome-512x512.png"></a>
+    </div>
 </html>
