--- a/smart_home/Close_Garage.html
+++ b/smart_home/Close_Garage.html
@@ -93,6 +93,6 @@
 </style>
     <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=close-garage"></iframe>
     <div id="icon_pic" align="center">
-        <a href=”javascript:history.go(0)”><img src="/smart_home/close_garage_android-chrome-512x512.png"></a>
+        <a href=”https://calebmct.github.io/smart_home/Close_Garage.html”><img src="/smart_home/garage.png"></a>
     </div>
 </html>
