--- a/smart_home/Desk_Light.html
+++ b/smart_home/Desk_Light.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <head>
 	<title>Toggle Light</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/desklight_apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/desklight_favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/desklight_favicon-16x16.png">
-	<link rel="manifest" href="/site_desklight.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="/smart_home/desklight_apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/smart_home/desklight_favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/smart_home/desklight_favicon-16x16.png">
+	<link rel="manifest" href="/smart_home/site_desklight.webmanifest">
 </head>
 <style>
     html {
