--- a/smart_home/Close_Garage.html
+++ b/smart_home/Close_Garage.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <head>
 	<title>Close the Garage</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/close_garage_apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/close_garage_favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/close_garage_favicon-16x16.png">
-	<link rel="manifest" href="/site_close_garage.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="/smart_home/close_garage_apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/smart_home/close_garage_favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/smart_home/close_garage_favicon-16x16.png">
+	<link rel="manifest" href="/smart_home/site_close_garage.webmanifest">
 </head>
 <style>
     html {
