--- a/smart_home/Desk_Light.html
+++ b/smart_home/Desk_Light.html
@@ -93,6 +93,6 @@
 </style>
     <iframe style="display:none;" src="https://api.voicemonkey.io/trigger?access_token=4f60fc49acb3b2ab8c825dfb190a23b0&secret_token=dc5c1679c8a6bc09328a13ac996ff4c7&monkey=office-light"></iframe>
     <div id="icon_pic" align="center">
-        <a href=”/Desk_Light"><img src="/smart_home/DeskLight_Icon.png" alt="Toggle Desk Light" width="600px"></a>
+        <a href="https://calebmct.github.io/smart_home/Desk_Light"><img src="/smart_home/DeskLight_Icon.png" alt="Toggle Desk Light" width="600px"></a>
     </div>
 </html>
