--- a/index.html
+++ b/index.html
@@ -1,91 +1,55 @@
-<html>
 <!DOCTYPE html>
-<head>
-	<title>just black</title>
-</head>
-<style>
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-Book.otf);
-		font-weight: normal;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-BookItalic.otf);
-		font-weight: normal;
-		font-style: italic;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-Bold.otf);
-		font-weight: bold;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-BoldItalic.otf);
-		font-weight: bold;
-		font-style: italic;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-Extralight.otf);
-		font-weight: 100;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-ExtralightItalic.otf);
-		font-weight: 100;
-		font-style: italic;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-Black.otf);
-		font-weight: 900;
-	}
-	@font-face {
-		font-family: fort;
-		src: url(assets/Fort-BlackItalic.otf);
-		font-weight: 900;
-		font-style: italic;
-	}
-	@font-face {
-		font-family: blue-fires;
-		src: url(assets/BlueFires.otf);
-		font-weight: normal;
-	}
-	h2, h3, h4, h5, body, p {
-		font-family: 'fort', sans-serif;
-	}
-	body, p {
-		font-size: 1rem;
-		font-weight: normal;
-	}
-	h1 {
-		font-family: blue-fires, sans-serif;
-		font-size: 3rem;
-	}
-	h2 {
-		font-size: 2.5rem;
-		font-weight: 100;
-	}
-	h3 {
-		font-size: 2.5rem;	
-		font-weight: bold;
-	}
-	h4 {
-		font-size: 2rem;	
-		font-weight: normal;
-	}
-	h5 {
-		font-size: 1.5rem;	
-		font-weight: 100;
-	}
-	html {
-		background: black;
-	}
-</style>
-<body>
-<h1>Testing Site</h1>
-	<h2><i>black screen. nothing else.</i>
-</body>
+<html>
+    <head>
+        <title>Caleb McTwigan | Portfolio</title>
+        <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="favicon/android-chrome-96x96.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-48x48.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-16x16.png">
+        <link rel="manifest" href="favicon/manifest.json">
+        <link rel="shortcut icon" href="favicon/favicon.ico">
+        <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
+        <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="scripts/main.js"></script>
+        <link rel="stylesheet" href="main.css" type="text/css">
+    </head>
+	<body>
+        <div class="header">
+            <a href="#" id="logo">
+                <img src="images/CM-logo.png" width="150px">
+            </a>
+            <div class="header-right">
+                <a href="bio">bio</a>
+                <a href="/portfolio">portfolio</a>
+                <a href="/contact">contact</a>
+                <div class="svg-corners">
+                    <svg viewBox="0 0 100 100">
+                        <path id="mint" d=""/>
+                    </svg>
+                </div>
+                <div class="svg-corners">
+                    <svg viewBox="0 0 100 100">
+                        <path id="coral" d=""/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div id="section-bg"></div>
+            <div class="section-title">REEL</div>
+        </div>
+        <div id="tv">
+        </div>
+    </body>
 </html>
