--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    
     <head>
         <title>Caleb McTwigan | Portfolio</title>
         <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
@@ -20,7 +21,8 @@
         <link rel="shortcut icon" href="favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
         <link rel="stylesheet" href="main.css" type="text/css">
     </head>
@@ -30,24 +32,36 @@
                 <img src="images/CM-logo.png" width="150px">
             </a>
             <div class="header-right">
-                <a href="bio">bio</a>
-                <a href="/portfolio">portfolio</a>
-                <a href="/contact">contact</a>
+                <a href="/bio" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+                        <path class="jumpy_bg" d="" />
+                    </svg>bio
+                </a>
+                <a href="/portfolio" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 500 100" xmlns="http://www.w3.org/2000/svg">
+                        <path class="jumpy_bg" d="" />
+                    </svg>portfolio
+                </a>
+                <a href="/contact" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 400 100" xmlns="http://www.w3.org/2000/svg">
+                        <path class="jumpy_bg" d="" />
+                    </svg>contact
+                </a>
                 <div class="svg-corners">
-                    <svg viewBox="0 0 100 100">
-                        <path id="mint" d=""/>
+                    <svg id="mint_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <path id="mint" d="" />
                     </svg>
                 </div>
                 <div class="svg-corners">
-                    <svg viewBox="0 0 100 100">
-                        <path id="coral" d=""/>
+                    <svg id="coral_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <path id="coral" d="" />
                     </svg>
                 </div>
             </div>
         </div>
         <div class="section">
             <div id="section-bg"></div>
-            <div class="section-title">REEL</div>
+            <div class="section-title">reel</div>
         </div>
         <div id="tv">
         </div>
