--- a/tipsy-talk-games/index.html
+++ b/tipsy-talk-games/index.html
@@ -36,9 +36,14 @@
             <div id="section-bg"></div>
             <div class="section-title">Charades</div>
         </div>
-        <div id="contact_section_container">
+        <div id="charades_section_container">
             <div id="aligned_container">
                 <p id="page_header">Receive a Prompt</p>
+                <br/><br/>
+                <button type="submit" onclick="getCharadesPrompt()" class="prompt_button">Click to Get a New Prompt</button>
+                <br/><br/><br/>
+                <div id="cPrompt">
+                </div>
             </div>
         </div>
     </body>
