--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,26 +22,29 @@
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../portfolio/scripts/portfolio.js"></script>
+        <script type="text/javascript" src="scripts/portfolio.js"></script>
         <link rel="stylesheet" href="portfolio.css" type="text/css">        
     </head>
 	<body>
         <div class="header">
-            <a href="#" id="logo">
-                <img src="images/CM-logo.png" width="150px">
+            <a href="../index.html" id="logo">
+                <img src="../images/CM-logo.png" width="150px">
             </a>
             <div class="header-right">
-                <a href="/bio">bio</a>
-                <a href="/portfolio">portfolio</a>
-                <a href="/contact">contact</a>
+                <a href="../bio" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+                        <path class="jumpy_bg" d="" />
+                    </svg>bio
+                </a>
+                <a href="#" id="current_page">portfolio</a>
+                <a href="../contact" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 400 100" xmlns="http://www.w3.org/2000/svg">
+                        <path class="jumpy_bg" d="" />
+                    </svg>contact
+                </a>
                 <div class="svg-corners">
-                    <svg viewBox="0 0 100 100">
-                        <path id="mint" d=""/>
-                    </svg>
-                </div>
-                <div class="svg-corners">
-                    <svg viewBox="0 0 100 100">
-                        <path id="coral" d=""/>
+                    <svg id="coral_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <path id="coral" d="" />
                     </svg>
                 </div>
             </div>
