Video view width adj

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@
             <div class="section-title">REEL</div>
         </div>
         <div id="tv">
-            <video width="100%" controls autoplay muted preload>
+            <video controls autoplay muted preload>
                 <source src="video/JCM_Reel-2023.mp4" type=video/mp4>
                 Your browser does not support the video tag. Consider updating your browser.
             </video>
