--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="scripts/portfolio.js"></script>
-        <link rel="stylesheet" href="portfolio.css" type="text/css">        
+        <link rel="stylesheet" href="../main.css" type="text/css">
+        <link rel="stylesheet" href="portfolio.css" type="text/css">
     </head>
 	<body>
         <div class="header">
