--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Caleb McTwigan | Portfolio</title>
+        <title>Caleb McTwigan | Works</title>
         <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
@@ -22,9 +22,9 @@
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="scripts/portfolio.js"></script>
+        <script type="text/javascript" src="works.js"></script>
         <link rel="stylesheet" href="../main.css" type="text/css">
-        <link rel="stylesheet" href="portfolio.css" type="text/css">
+        <link rel="stylesheet" href="works.css" type="text/css">
     </head>
 	<body>
         <div class="header">
@@ -32,16 +32,16 @@
                 <img src="../images/CM-logo.png" width="150px">
             </a>
             <div class="header-right">
-                <a href="../bio" class="jumpy">
+                <a href="../works" class="jumpy">
                     <svg class="jumpy_svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
-                    </svg>bio
+                    </svg>works
                 </a>
-                <a href="#" id="current_page">portfolio</a>
-                <a href="../contact" class="jumpy">
+                <a href="#" id="current_page">r&eacute;sum&eacute;</a>
+                <a href="../about-me" class="jumpy">
                     <svg class="jumpy_svg" viewBox="0 0 400 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
-                    </svg>contact
+                    </svg>about me
                 </a>
                 <div class="svg-corners">
                     <svg id="coral_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
