--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     
     <head>
-        <title>Caleb McTwigan | </title>
+        <title>Caleb McTwigan | Home</title>
+        <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
@@ -21,9 +22,11 @@
         <link rel="shortcut icon" href="favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+        <!-- Javascript -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="main.js"></script>
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="main.css" type="text/css">
     </head>
 	<body>
@@ -31,6 +34,7 @@
             <a href="#" id="logo">
                 <img src="images/CM-logo.png" width="150px">
             </a>
+            <!-- Links -->
             <div class="header-right">
                 <a href="/works" class="jumpy">
                     <svg class="jumpy_svg" viewBox="0 0 270 100" xmlns="http://www.w3.org/2000/svg">
@@ -47,6 +51,7 @@
                         <path class="jumpy_bg" d="" />
                     </svg>about me
                 </a>
+                <!-- SVG Corners -->
                 <div class="svg-corners">
                     <svg id="mint_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                         <path id="mint" d="" />
@@ -65,20 +70,6 @@
                     <source src="portfolio/video/JCM_Reel-2023.mp4" type=video/mp4>
                     Your browser does not support the video tag. Consider updating your browser.
                 </video>
-<!--                 
-                <div id="play-button">
-                    <svg class="play-pause" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 82 75">
-                        <path class="" id="pp-left" d=""/>
-                        <path class="" id="pp-right" d=""/>
-                    </svg>
-                </div>
-                <div id="unmute">
-                    UNMUTE
-                </div>
-                <div id="mute">
-                    MUTE
-                </div>
--->
             </div>
             <div id="tv-credits">
                 Created with: After Effects, Illustrator, Premiere, Photoshop, Maya, and scanned mixed media.
