--- a/works/index.html
+++ b/works/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Caleb McTwigan | Works</title>
+        <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
@@ -20,9 +21,11 @@
         <link rel="shortcut icon" href="../favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
+        <!-- Javascript -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="works.js"></script>
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="../main.css" type="text/css">
         <link rel="stylesheet" href="works.css" type="text/css">
     </head>
@@ -32,17 +35,24 @@
                 <img src="../images/CM-logo.png" width="150px">
             </a>
             <div class="header-right">
-                <a href="../works" class="jumpy">
-                    <svg class="jumpy_svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+                <!-- Links -->
+                <a href="#" id="current_page">works</a>
+                <a href="../resume" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 310 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
-                    </svg>works
+                    </svg>r&eacute;sum&eacute;
                 </a>
-                <a href="#" id="current_page">r&eacute;sum&eacute;</a>
                 <a href="../about-me" class="jumpy">
                     <svg class="jumpy_svg" viewBox="0 0 400 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
                     </svg>about me
                 </a>
+                <!-- SVG Corners -->
+                <div class="svg-corners">
+                    <svg id="mint_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <path id="mint" d="" />
+                    </svg>
+                </div>
                 <div class="svg-corners">
                     <svg id="coral_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                         <path id="coral" d="" />
@@ -50,15 +60,12 @@
                 </div>
             </div>
         </div>
-        <div class="section">
-            <div id="section-bg"></div>
-            <div class="section-title">REEL</div>
+        <div class="title_container">
+            <div class="title_bg"></div>
+            <div class="section-title">works - graphic design</div>
         </div>
         <div id="tv">
-            <video controls autoplay muted preload>
-                <source src="video/JCM_Reel-2023.mp4" type=video/mp4>
-                Your browser does not support the video tag. Consider updating your browser.
-            </video>
+            stuff
         </div>
     </body>
 </html>
