--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Caleb McTwigan | Works</title>
+        <title>Caleb McTwigan | R&eacute;sum&eacute;</title>
+        <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
@@ -20,57 +21,33 @@
         <link rel="shortcut icon" href="../favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
+        <!-- Javascript -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="aboutMe.js"></script>
-        <link rel="stylesheet" href="../main.css" type="text/css"> <!--I need this line to update-->
-        <link rel="stylesheet" href="about-me.css" type="text/css"> <!--I need this line to show up-->
+        <script type="text/javascript" src="resume.js"></script>
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="../main.css" type="text/css">
+        <link rel="stylesheet" href="resume.css" type="text/css"> <!--I need this line to show up-->
     </head>
     <body>
-        <div class="header">
-            <a href="#" id="logo">
-                <img src="../images/CM-logo.png" width="150px">
-            </a>
-            <div class="header-right">
-                <a href="../works" class="jumpy">
-                    <svg class="jumpy_svg" viewBox="0 0 270 100" xmlns="http://www.w3.org/2000/svg">
-                        <path class="jumpy_bg" d="" />
-                    </svg>works
-                </a>
-                <a href="../resume" class="jumpy">
-                    <svg class="jumpy_svg" viewBox="0 0 310 100" xmlns="http://www.w3.org/2000/svg">
-                        <path class="jumpy_bg" d="" />
-                    </svg>r&eacute;sum&eacute;
-                </a>
-                <a href="#" id="current_page">about me</a>
-                <div class="svg-corners">
-                    <svg id="mint_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                        <path id="mint" d="" />
-                    </svg>
-                </div>
-                <div class="svg-corners">
-                    <svg id="coral_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                        <path id="coral" d="" />
-                    </svg>
-                </div>
-            </div>
-        </div>
         <div class="header">
             <a href="../index.html" id="logo">
                 <img src="../images/CM-logo.png" width="150px">
             </a>
             <div class="header-right">
-                <a href="/works" class="jumpy">
+                <!-- Links -->
+                <a href="../works" class="jumpy">
                     <svg class="jumpy_svg" viewBox="0 0 270 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
                     </svg>works
                 </a>
-                <a href="/resume" class="jumpy">
-                    <svg class="jumpy_svg" viewBox="0 0 310 100" xmlns="http://www.w3.org/2000/svg">
+                <a href="#" id="current_page">r&eacute;sum&eacute;</a>
+                <a href="../about-me" class="jumpy">
+                    <svg class="jumpy_svg" viewBox="0 0 400 100" xmlns="http://www.w3.org/2000/svg">
                         <path class="jumpy_bg" d="" />
-                    </svg>r&eacute;sum&eacute;
+                    </svg>about me
                 </a>
-                <a href="#" id="current_page">about me</a>
+                <!-- SVG Corners -->
                 <div class="svg-corners">
                     <svg id="mint_svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                         <path id="mint" d="" />
@@ -83,98 +60,170 @@
                 </div>
             </div>
         </div>
-        <!--
-        <div class="section">
-            <div id="section-bg"></div>
-            <div class="section-title">about me</div>
+        <div class="title_container">
+            <div class="title_bg"></div>
+            <div class="section-title">r&eacute;sum&eacute;</div>
         </div>
-        -->
-        <div id="section_container">
-            <div id="about_bg"></div>
-            <div id="about_content">
-                <p id="page_header">Hi, I'm Caleb McTwigan</p>
-                <table>
-                    <tr>
-                        <td valign="top">
-                            <img src="../images/bio-pic.png" />
-                        </td>
-                        <td id="about_blurb">
-                            <p id="about_intro">I am a motion designer, artist, and multi-lingual coder.
-                                I like seeking out opportunities to gain more experience, and am forever educating myself to expand my skill set.<br/><br/>
-                                I have spent most of my career working in art, or in conjunction with artists.
-                                This includes:
-                                <ul>
-                                    <li>Motion Design</li>
-                                    <li>Illustration</li>
-                                    <li>Web Design</li>
-                                    <li>Scripting & Coding</li>
-                                    <li>Video Production</li>
-                                    <li>Developing & Optimizing Artist's Processes</li>
-                                </ul>
-                                Outside of my creative endeavors, you may find me in the backyard with my partner watching a movie, reading a
-                                good children's book... to my sons, attempting to cling on to my dominance over the boys in
-                                video games, or narrowly avoiding electrocuting, maiming, or injuring myself while doing some
-                                DIY projects at home!
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+        <div class="section_container">
+            <table id="res_table">
+                <tr>
+                    <td id="left_resume">
+                        <h1>Summary</h1>
+                        <div class="res_body">
+                            Motion graphics animator, graphic designer, &amp; video/audio editor,
+                            producing compelling stories for brands and concepts. With more than
+                            16 years combined experience, adapts technical and analog techniques
+                            to find new and innovative ways to create impressive &amp; unique content.
+                        </div>
+                        <h1>Tools &amp; Skills</h1>
+                        <h2>Adobe Suite</h2>
+                        <div class="res_body">
+                            <ul>
+                                <li>After Effects</li>
+                                <li>Illustrator</li>
+                                <li>Photoshop</li>
+                                <li>Premiere</li>
+                                <li>Audition</li>
+                                <li>Media Encoder</li>
+                                <li>InDesign</li>
+                            </ul>
+                        </div>
+                        <h2>Coding Languages</h2>
+                        <div class="res_body">
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JS/JQuery</li>
+                                <li>SQL</li>
+                            </ul>
+                        </div>
+                        <h2>Business &amp; Reporting Tools</h2>
+                        <div class="res_body">
+                            <ul>
+                                <li>Monday</li>
+                                <li>Jira</li>
+                                <li>SAP Crystal Reports</li>
+                                <li>Basecamp</li>
+                                <li>Confluence</li>
+                            </ul>
+                        </div>
+                        <h2>Google/Office Suite</h2>
+                        <div class="res_body">
+                            <ul>
+                                <li>Sheets/Excel</li>
+                                <li>Docs/Word</li>
+                                <li>Slides/Powerpoint</li>
+                                <li>Google/VBA Scripts</li>
+                            </ul>
+                        </div>
+                        <h2>Reporting/Data Tools</h2>
+                        <div class="res_body">
+                            <ul>
+                                <li>Crystal Reports</li>
+                                <li>DataGrip</li>
+                                <li>Metabase</li>
+                                <li>Excel</li>
+                            </ul>
+                        </div>
+                        <div id="res_edu">
+                            <h1>Education</h1>
+                            <h2>Savannah College of Art and Design</h2>
+                            <div class="res_body">2007 - 2009 | Bachelor of Fine Arts, Animation</div>
+                            <h2>Flagler College</h2>
+                            <div class="res_body">2003 - 2005 | Fine Arts Studies</div>
+                        </div>
+                    </td>
+                    <td id="right_resume">
+                        <h1>Work Experience</h1>
+                        <h2>Art &amp; Design Optimization Specialist</h2>
+                        <div class="res_body" id="work_exp">
+                            <h3>Custom Ink | Jan 2015 - Mar 2023</h3>
+                            <ul>
+                                <li>Developed, improved, and maintained the processes,
+                                    resources, and overall performance of the Art &amp;
+                                    Design Teams (~175 ppl).
+                                </li>
+                                <li>Created accessible visuals, images, videos, charts,
+                                    presentations, and wiki articles to communicate
+                                    changes and new information.
+                                </li>
+                                <li>Managed projects from idea to execution, including
+                                    a new tool for artists to claim and send along
+                                    customer design requests.
+                                </li>
+                                <li>Successfully transitioned >100 ppl into a streamlined
+                                    role for ~25% productivity gain.
+                                </li>
+                                <li>Created and supported the management of the company-wide
+                                    wiki styling, templates, and formatting.
+                                </li>
+                                <li>Supported the Data team to develop reports for various
+                                    teams across the business.
+                                </li>
+                            </ul>
+                        </div>
+                        <h2>Lead - Expert Production Artist Lead</h2>
+                        <div class="res_body" id="work_exp">
+                            <h3>Custom Ink | Mar 2014 - Jan 2015</h3>
+                            <ul>
+                                <li>Produced engaging graphics, animations, print materials,
+                                    and communications for the Expert Production Art team's
+                                    busy season themes and activities.
+                                </li>
+                                <li>Created and maintained plug-and-play performance &amp;
+                                    reliability tracking spreadsheets and summary docs.
+                                </li>
+                                <li>Fostered team growth and development, meeting
+                                    individually with team members to help achieve their goals.
+                                </li>
+                                <li>Established myself as a go-to for questions, support, and
+                                    decision making for new and complex processes.
+                                </li>
+                            </ul>
+                        </div>
+                        <h2>Graphic Artist | Website Design</h2>
+                        <div class="res_body" id="work_exp">
+                            <h3>Various | 2007 - 2023</h3>
+                            <ul>
+                                <li>
+                                    <strong>Neptune Ice</strong> | CSS &amp; HTML for front-end
+                                    website and online shop on Shopify platform.
+                                </li>
+                                <li>
+                                    <strong>The Vine VA</strong> | Graphic Design &amp; Admin.
+                                </li>
+                                <li>
+                                    <strong>Sabre Technologies</strong> | Web Design &amp; Coding.
+                                </li>
+                                <li>
+                                    <strong>Custom Ink</strong> | Involved in directing, editing,
+                                    filming, interviewing, mixing, &amp; creating graphics/animations
+                                    for internal promotional videos.
+                                </li>
+                            </ul>
+                        </div>
+                        <h1>Achievements &amp; More</h1>
+                        <h2>Participant - 48 Hour Film Project, Washington D.C.</h2>
+                        <div class="res_body" id="work_exp">
+                            <h3>2018</h3>
+                            <ul>
+                                <li>Editing, mixing, &amp; A/V enhancing in a short film created over a weekend
+                                    among a small group.
+                                </li>
+                            </ul>
+                        </div>
+                        <h2>Effective Facilitator - Leadership Strategies</h2>
+                        <div class="res_body" id="work_exp">
+                            <h3>2019</h3>
+                            <ul>
+                                <li>A 4-day course on learning and practicing effective meeting facilitation
+                                    tools and techniques.
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
-        <div id="resume_section">
-            <div class="section">
-                <div id="section-bg"></div>
-                <div class="section-title">resume</div>
-            </div>
-            <div id="resume_container">
-                <table id="res_table">
-                    <tr>
-                        <td id="left_resume">
-                            <div class="res_header">Work</div>
-                            <div class="res_title">Art & Design Optimization Specialist</div>
-                            <div class="res_body">Custom Ink | Jan 2015 - Current</div>
-                            <div class="res_title">Report Developer (Part-Time)</div>
-                            <div class="res_body">Custom Ink | Jun 2019 - Current</div>
-                            <div class="res_title">Expert Production Artist Lead</div>
-                            <div class="res_body">Custom Ink | Mar 2014 - Jan 2015</div>
-                            <div class="res_title">Freelance</div>
-                            <div class="res_body">Web Design & Development, Graphic Design, Animation, Video Editing</div>
-                            <div id="res_spacer"></div>
-                            <div class="res_title">Experience</div>
-                            <div class="res_body">
-                                Process development for a team of over 150+ artists<br/><br/>
-                                Web design & styling for an internal wiki utilized by 1000+ team members<br/><br/>
-                                Internal promotional animations, graphics, videos, and comms<br/><br/>
-                                Video production: direction, editing, color grading, audio mixing, and animation/graphics within brand guidelines<br/><br/>
-                                Project management from idea to execution<br/><br/>
-                                Coaching and developing peers to establish a pipeline of leaders and build up the skills of others<br/>
-                            </div>
-                        </td>
-                        <td id="right_resume">
-                            <div id="res_tools">
-                                <div class="res_header">Tools & Skills</div>
-                                <div class="res_title">Adobe Suite</div>
-                                <div class="res_body">After Effects, Illustrator, Photoshop, Premiere, Audition</div>
-                                <div class="res_title">Project Management & Helpdesk Tools</div>
-                                <div class="res_body">Github, JIRA, Zendesk, Basecamp</div>
-                                <div class="res_title">Reporting/Data Tools</div>
-                                <div class="res_body">Crystal Reports, Excel, Metabase, DataGrip</div>
-                                <div class="res_title">Google Suite</div>
-                                <div class="res_body">Sheets, Slides, Docs, Forms</div>
-                                <div class="res_title">Languages</div>
-                                <div class="res_body">HTML, CSS, JS/JQuery, SQL, Applescript, Google App Scripts</div>
-                            </div>
-                            <div id="res_edu">
-                                <div class="res_header">Education</div>
-                                <div class="res_title">Bachelor of Fine Arts, Animation</div>
-                                <div class="res_body">Savannah College of Art and Design | 2007 - 2009</div>
-                                <div class="res_title">Fine Arts Studies</div>
-                                <div class="res_body">Flagler College | 2003 - 2005</div>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        <div>
     </body>
 </html>
