"Works" coming soon
Updated "works" page to have links to PDF and reel, and "coming soon" messages

Also...
- updated some CSS styles for body and section text

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div id="about_blurb">I am a motion graphics animator, graphic designer, & video/audio editor, producing compelling stories for brands
+                            <div class="section_body_text">I am a motion graphics animator, graphic designer, & video/audio editor, producing compelling stories for brands
                                 and concepts. With more than 16 years combined experience, I like to utilize a broad set of techniques to find new and innovative
                                 ways to create impressive & unique content.
                                 <br/><br/>
