--- a/works/index.html
+++ b/works/index.html
@@ -64,8 +64,27 @@
             <div class="title_bg"></div>
             <div class="section-title">works - graphic design</div>
         </div>
-        <div id="tv">
-            stuff
+        <div class="section_container">
+            <div class="main_body_container">
+                <div class="section_body_text">
+                    <text style="font-style: italic">Updates coming soon...</text>
+                    <br/><br/>
+                    Graphic design examples | <a href="../images/J_Caleb_McTwigan-Graphic_Design_Logo_and_Typography_Portfolio.pdf" class="dl_link">PDF</a>
+                </div>
+            </div>
+        </div>
+        <div class="title_container">
+            <div class="title_bg"></div>
+            <div class="section-title">works - motion graphics &amp; video</div>
+        </div>
+        <div class="section_container">
+            <div class="main_body_container">
+                <div class="section_body_text">
+                    <text style="font-style: italic">Updates coming soon...</text>
+                    <br/><br/>
+                    View the reel | <a href="../index.html" class="dl_link">home</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
